<resources>
    <string name="app_name">Lottery</string>
    <string name="activity_settings_update_log_title">Update log</string>
    <string name="menu_switch_lottery_type">Switch lottery type</string>
    <string name="menu_switch_table_type">Switch table type</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_move_to_top">Move to top</string>
    <string name="menu_move_to_bottom">Move to bottom</string>
    <string name="menu_switch_display_type">Switch display type</string>
    <string name="menu_update">Update</string>
    <string name="activity_main_display_by_order">Display by order</string>
    <string name="activity_main_display_by_ending">Display by ending</string>
    <string name="activity_main_display_by_adding">Display by adding</string>
    <string name="activity_main_toast_update_ignore">Updating</string>
    <string name="activity_main_toast_update_complete">Update complete</string>
    <string name="activity_main_toast_update_failure">Update failure</string>
    <string name="dialog_lottery_type_title">Lottery type</string>
    <string name="dialog_display_type_title">Display type</string>
    <string name="dialog_table_type_title">Table type</string>
    <string name="view_component_loading">Loading…</string>
    <string name="lottery_type_lto">Lto</string>
    <string name="lottery_type_lto_big">LtoBig</string>
    <string name="lottery_type_lto_hk">LtoHK</string>
</resources>