<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/showTop"
        android:icon="@drawable/ic_arrow_collapse_up_white_36dp"
        android:title="@string/menu_move_to_top"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/showBottom"
        android:icon="@drawable/ic_arrow_collapse_down_white_36dp"
        android:title="@string/menu_move_to_bottom"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/switchDisplayType"
        android:icon="@drawable/ic_chart_pie_white_36dp"
        android:title="@string/menu_switch_display_type"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/switchLotteryType"
        android:icon="@drawable/ic_table_of_contents_white_36dp"
        android:title="@string/menu_switch_lottery_type"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/switchTableType"
        android:icon="@drawable/ic_table_cog_white_36dp"
        android:title="@string/menu_switch_table_type"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/update"
        android:icon="@drawable/ic_update_white_36dp"
        android:title="@string/menu_update"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_cog_outline_white_36dp"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
</menu>